finalised the gallery for projects, added animations, fixed layout issues

--- a/public/scss/components/projects.scss
+++ b/public/scss/components/projects.scss
@@ -4,6 +4,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: start;
+    min-height: fit-content;
 }
 
 .projects_header {
@@ -32,8 +33,9 @@
     position: relative;
     margin-bottom: 3vh;
     max-width: 70vw;
-    min-width: 950px;
-    min-height: 40vh;
+    min-width: 1000px;
+    height: 40vh;
+    min-height: 300px;
     background-color: #fff;
     display: flex;
     flex-direction: row;
@@ -47,21 +49,31 @@
     justify-content: space-around;
 }
 
+#project_one > .project_link > a{ 
+    color: #fff;
+}
+
+
 .img_frame { 
-    width: 47.5%;
+    width: 55%;
+    height: 100%;
+    min-height: 300px;
+    transition: width 0.5s ease-in-out; /* Adjust duration and easing as needed */
+
     border-radius: 1vw;
-    transition: all 0.9s ease; /* Adjust the time (0.5s) as needed */
-    transition: height 0.9s ease; /* Adjust the time (0.5s) as needed */
     overflow:hidden
 
 }
 
-.img_frame > img {
+.img_frame > img { //project_img 
     max-width: 75vw;
     max-height: 55vh;
     height: 100%;
+    min-height: 300px;
+    transition: filter 0.3s ease-in-out; /* Adjust duration and easing as needed */
+
     min-width: 965px;
-    min-height: 315px;
+
     border-radius: 1vw;
 }
 
@@ -71,7 +83,6 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    min-height: 100%;
 }
 
 .info_box {
@@ -95,16 +106,11 @@
 }
 .project_des{ 
     min-width: 450px;
-    word-wrap: break-word;
-    white-space: pre-wrap;
-    word-break: break-word;
     line-height: 1;
-    min-height: fit-content;
     max-height: 40%;
-    max-width: 90%;   
-    margin: 2% 0; 
-
-
+    max-width: 85%;   
+    margin: 2% 0;
+    text-align: justify;
 }
 
 
@@ -166,3 +172,21 @@
     font-size: 2.5rem;
 }
 
+.project_link { 
+    display: none;
+    align-items: center;
+}
+
+.project_link > a { 
+    text-decoration: none;
+    text-emphasis: none;
+    font-size: 4rem;
+    font-weight: 600;
+    color: #333333;
+}
+
+.project_link > a:hover { 
+    text-decoration: underline;
+    text-emphasis: none;
+    font-size: 4rem;
+}
